--- a/New folder/Inventory System/Inventory System.csproj
+++ b/New folder/Inventory System/Inventory System.csproj
@@ -102,6 +102,18 @@
     <Compile Include="StocksOnHandModuleForm.Designer.cs">
       <DependentUpon>StocksOnHandModuleForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserForm.Designer.cs">
+      <DependentUpon>UserForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserModuleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserModuleForm.Designer.cs">
+      <DependentUpon>UserModuleForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="VitaminsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,6 +161,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="StocksOnHandModuleForm.resx">
       <DependentUpon>StocksOnHandModuleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserForm.resx">
+      <DependentUpon>UserForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserModuleForm.resx">
+      <DependentUpon>UserModuleForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VitaminsForm.resx">
       <DependentUpon>VitaminsForm.cs</DependentUpon>
